--- a/troli.html
+++ b/troli.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<meta charset="utf-8">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" hrer="troli.js">
+  <link rel="stylesheet" href="troli.css">
   <style>
   /* Make the image fully responsive */
   .carousel-inner img {
